added improvements on header navbar

--- a/src/main/resources/static/fmstyle.css
+++ b/src/main/resources/static/fmstyle.css
@@ -40,6 +40,11 @@
     background: #343a40; /* bs4 dark */
 }
 
+.info-over-dark {
+    color: #17a2b8; /* bs4 info */
+    background: #343a40; /* bs4 dark */
+}
+
 
 
 
