added multiple authors functionality (up to 5) to newBook.html

--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -5,7 +5,7 @@
 
     <body>
 
-        <button th:fragment="saveButton" class="btn btn-outline-info btn-block font-weight-bold" type="submit">
+        <button th:fragment="saveButton" class="btn btn-outline-info btn-block font-weight-bold my-2" type="submit">
             Save
         </button>
 
