--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -118,7 +118,7 @@
         </div>
 
         <div class="row" th:fragment="footer">
-            <div class="col-sm-12">
+            <div class="col-sm-12 mt-5">
                 <footer class="bg-light text-center">
                     <span class="info-copyrigth"><a href="https://github.com/misrraimsp/firstmarket">firstmarket</a> © 2020</span>
                 </footer>
