--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -103,6 +103,116 @@
             }, false);
         </script>
 
+        <!-- Este script permite mostrar u ocultar dinámicamente diferentes autores (máximo 5).
+             Además permite que cuando se detecte un error en el lado del servidor se muestren
+             los campos implicados automáticamente (simulando el evento 'click()')
+
+             This script allows to dynamically show or hide different authors (maximum 5).
+             It also allows the fields involved on a server side error to be displayed
+             automatically by properly simulating the 'click ()' event.
+         -->
+        <script th:fragment="manageAuthors">
+            $(document).ready(function(){
+
+                var speed = 250;
+
+                $("#showAuthor2").click(function(){
+                    $("#showAuthor2").hide(speed);
+                    $("#author2").show(speed);
+                    $("#hideAuthor2").show(speed);
+                    $("#showAuthor3").show(speed);
+                });
+
+                $("#hideAuthor2").click(function(){
+                    $("#showAuthor3").hide(speed);
+                    $("#hideAuthor2").hide(speed);
+                    $("#author2").hide(speed);
+                    $("#authorFirstName2").val("");
+                    $("#authorLastName2").val("");
+                    $("#showAuthor2").show(speed);
+                });
+
+                $("#showAuthor3").click(function(){
+                    $("#showAuthor3").hide(speed);
+                    $("#hideAuthor2").hide(speed);
+                    $("#author3").show(speed);
+                    $("#showAuthor4").show(speed);
+                    $("#hideAuthor3").show(speed);
+                });
+
+                $("#hideAuthor3").click(function(){
+                    $("#showAuthor4").hide(speed);
+                    $("#hideAuthor3").hide(speed);
+                    $("#author3").hide(speed);
+                    $("#authorFirstName3").val("");
+                    $("#authorLastName3").val("");
+                    $("#showAuthor3").show(speed);
+                    $("#hideAuthor2").show(speed);
+                });
+
+                $("#showAuthor4").click(function(){
+                    $("#showAuthor4").hide(speed);
+                    $("#hideAuthor3").hide(speed);
+                    $("#author4").show(speed);
+                    $("#showAuthor5").show(speed);
+                    $("#hideAuthor4").show(speed);
+
+                });
+
+                $("#hideAuthor4").click(function(){
+                    $("#showAuthor5").hide(speed);
+                    $("#hideAuthor4").hide(speed);
+                    $("#author4").hide(speed);
+                    $("#authorFirstName4").val("");
+                    $("#authorLastName4").val("");
+                    $("#showAuthor4").show(speed);
+                    $("#hideAuthor3").show(speed);
+                });
+
+                $("#showAuthor5").click(function(){
+                    $("#showAuthor5").hide(speed);
+                    $("#hideAuthor4").hide(speed);
+                    $("#author5").show(speed);
+                    $("#hideAuthor5").show(speed);
+                });
+
+                $("#hideAuthor5").click(function(){
+                    $("#hideAuthor5").hide(speed);
+                    $("#author5").hide(speed);
+                    $("#authorFirstName5").val("");
+                    $("#authorLastName5").val("");
+                    $("#showAuthor5").show(speed);
+                    $("#hideAuthor4").show(speed);
+                });
+
+                if (document.getElementById('authorFirstName5').value != "" || document.getElementById('authorLastName5').value != "") {
+                    document.getElementById('showAuthor2').click();
+                    document.getElementById('showAuthor3').click();
+                    document.getElementById('showAuthor4').click();
+                    document.getElementById('showAuthor5').click();
+                }
+                else {
+                    if (document.getElementById('authorFirstName4').value != "" || document.getElementById('authorLastName4').value != "") {
+                        document.getElementById('showAuthor2').click();
+                        document.getElementById('showAuthor3').click();
+                        document.getElementById('showAuthor4').click();
+                    }
+                    else {
+                        if (document.getElementById('authorFirstName3').value != "" || document.getElementById('authorLastName3').value != "") {
+                            document.getElementById('showAuthor2').click();
+                            document.getElementById('showAuthor3').click();
+                        }
+                        else {
+                            if (document.getElementById('authorFirstName2').value != "" || document.getElementById('authorLastName2').value != "") {
+                                document.getElementById('showAuthor2').click();
+                            }
+                        }
+                    }
+                }
+
+            });
+        </script>
+
     </body>
 
 </html>
