--- a/src/main/resources/templates/newBook.html
+++ b/src/main/resources/templates/newBook.html
@@ -19,11 +19,11 @@
             <div th:replace="fragments/layout::underHead('New Book')"></div>
             <div class="row">
                 <div class="col-sm-2 bg-white"></div>
-                <div class="col-sm-8 bg-light">
+                <div class="col-sm-8">
                     <form class="needs-validation" novalidate id="isbnForm" th:action="@{/admin/newBook}" th:object="${formBook}" method="POST" enctype="multipart/form-data" action="#">
                         <div th:replace="fragments/components::backendValidationErrors"></div>
                         <div class="form-row">
-                            <div class="col-sm-6">
+                            <div class="col-sm-6 bg-light">
                                 <!-------------------------------------------------------------------------Title-->
                                 <div class="form-group">
                                     <label for="title">Title:</label>
@@ -31,6 +31,20 @@
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendValidationFieldErrors('title')"></div>
+                                <!-------------------------------------------------------------------------Publisher-->
+                                <div class="form-group">
+                                    <label for="publisher">Publisher:</label>
+                                    <input class="form-control" type="text" th:field="*{publisherName}" id="publisher" placeholder="enter publisher name" th:pattern="${TEXT_BASIC}">
+                                    <div class="invalid-feedback">Please fill out this field correctly</div>
+                                </div>
+                                <div th:replace="fragments/components::backendValidationFieldErrors('publisherName')"></div>
+                                <!-------------------------------------------------------------------------Year-->
+                                <div class="form-group">
+                                    <label for="year">Year of Publication:</label>
+                                    <input class="form-control" type="text" th:field="*{year}" id="year" placeholder="enter year" th:pattern="${YEAR}">
+                                    <div class="invalid-feedback">Please fill out this field correctly</div>
+                                </div>
+                                <div th:replace="fragments/components::backendValidationFieldErrors('year')"></div>
                                 <!-------------------------------------------------------------------------Category-->
                                 <div class="form-group">
                                     <label for="category">Category:</label>
@@ -61,10 +75,91 @@
                                 <!-------------------------------------------------------------------------Description-->
                                 <div class="form-group">
                                     <label for="description">Description:</label>
-                                    <textarea class="form-control" rows="4" th:field="*{description}" id="description" placeholder="enter description" th:pattern="${TEXT_LONG}"></textarea>
+                                    <textarea class="form-control" rows="5" th:field="*{description}" id="description" placeholder="enter description" th:pattern="${TEXT_LONG}"></textarea>
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendValidationFieldErrors('description')"></div>
+                            </div>
+                            <div class="col-sm-6 bg-light">
+                                <!-------------------------------------------------------------------------Authors-->
+                                <div id="authors">
+                                    <!------------------------------------------------Author 1-->
+                                    <div id="author1">
+                                        <label for="authorFirstName1">Author/s:</label>
+                                        <div class="input-group mb-3">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName1}" id="authorFirstName1" placeholder="First Name" th:pattern="${TEXT_BASIC}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName1}" id="authorLastName1" placeholder="Last Name" th:pattern="${TEXT_BASIC}">
+                                            <div class="input-group-append">
+                                                <button class="btn btn-outline-info" style="display: block" type="button" id="showAuthor2" title="Add Author"><i class="fas fa-plus"></i></button>
+                                            </div>
+                                            <div class="invalid-feedback">Please fill out this field correctly</div>
+                                        </div>
+                                        <div th:replace="fragments/components::backendValidationFieldErrors('authorFirstName1')"></div>
+                                        <div th:replace="fragments/components::backendValidationFieldErrors('authorLastName1')"></div>
+                                    </div>
+                                    <!------------------------------------------------Author 2-->
+                                    <div id="author2" style="display: none">
+                                        <div class="input-group mb-3">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName2}" id="authorFirstName2" placeholder="First Name" th:pattern="${TEXT_BASIC}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName2}" id="authorLastName2" placeholder="Last Name" th:pattern="${TEXT_BASIC}">
+                                            <div class="input-group-append">
+                                                <button class="btn btn-outline-info" style="display: none" type="button" id="showAuthor3" title="Add Author"><i class="fas fa-plus"></i></button>
+                                                <button class="btn btn-outline-danger" style="display: none" type="button" id="hideAuthor2" title="Delete Author"><i class="fas fa-minus"></i></button>
+                                            </div>
+                                            <div class="invalid-feedback">Please fill out this field correctly</div>
+                                        </div>
+                                        <div th:replace="fragments/components::backendValidationFieldErrors('authorFirstName2')"></div>
+                                        <div th:replace="fragments/components::backendValidationFieldErrors('authorLastName2')"></div>
+                                    </div>
+                                    <!------------------------------------------------Author 3-->
+                                    <div id="author3" style="display: none">
+                                        <div class="input-group mb-3">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName3}" id="authorFirstName3" placeholder="First Name" th:pattern="${TEXT_BASIC}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName3}" id="authorLastName3" placeholder="Last Name" th:pattern="${TEXT_BASIC}">
+                                            <div class="input-group-append">
+                                                <button class="btn btn-outline-info" style="display: none" type="button" id="showAuthor4" title="Add Author"><i class="fas fa-plus"></i></button>
+                                                <button class="btn btn-outline-danger" style="display: none" type="button" id="hideAuthor3" title="Delete Author"><i class="fas fa-minus"></i></button>
+                                            </div>
+                                            <div class="invalid-feedback">Please fill out this field correctly</div>
+                                        </div>
+                                        <div th:replace="fragments/components::backendValidationFieldErrors('authorFirstName3')"></div>
+                                        <div th:replace="fragments/components::backendValidationFieldErrors('authorLastName3')"></div>
+                                    </div>
+                                    <!------------------------------------------------Author 4-->
+                                    <div id="author4" style="display: none">
+                                        <div class="input-group mb-3">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName4}" id="authorFirstName4" placeholder="First Name" th:pattern="${TEXT_BASIC}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName4}" id="authorLastName4" placeholder="Last Name" th:pattern="${TEXT_BASIC}">
+                                            <div class="input-group-append">
+                                                <button class="btn btn-outline-info" style="display: none" type="button" id="showAuthor5" title="Add Author"><i class="fas fa-plus"></i></button>
+                                                <button class="btn btn-outline-danger" style="display: none" type="button" id="hideAuthor4" title="Delete Author"><i class="fas fa-minus"></i></button>
+                                            </div>
+                                            <div class="invalid-feedback">Please fill out this field correctly</div>
+                                        </div>
+                                        <div th:replace="fragments/components::backendValidationFieldErrors('authorFirstName4')"></div>
+                                        <div th:replace="fragments/components::backendValidationFieldErrors('authorLastName4')"></div>
+                                    </div>
+                                    <!------------------------------------------------Author 5-->
+                                    <div id="author5" style="display: none">
+                                        <div class="input-group mb-3">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName5}" id="authorFirstName5" placeholder="First Name" th:pattern="${TEXT_BASIC}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName5}" id="authorLastName5" placeholder="Last Name" th:pattern="${TEXT_BASIC}">
+                                            <div class="input-group-append">
+                                                <button class="btn btn-outline-danger" style="display: none" type="button" id="hideAuthor5" title="Delete Author"><i class="fas fa-minus"></i></button>
+                                            </div>
+                                            <div class="invalid-feedback">Please fill out this field correctly</div>
+                                        </div>
+                                        <div th:replace="fragments/components::backendValidationFieldErrors('authorFirstName5')"></div>
+                                        <div th:replace="fragments/components::backendValidationFieldErrors('authorLastName5')"></div>
+                                    </div>
+                                </div>
+                                <!-------------------------------------------------------------------------ISBN-->
+                                <div class="form-group">
+                                    <label for="isbn">ISBN:</label>
+                                    <input class="form-control" type="text" th:field="*{isbn}" id="isbn" placeholder="enter isbn" required th:pattern="${ISBN}">
+                                    <div class="invalid-feedback">Please fill out this field with a valid ISBN</div>
+                                </div>
+                                <div th:replace="fragments/components::backendValidationFieldErrors('isbn')"></div>
                                 <!-------------------------------------------------------------------------Language-->
                                 <div class="form-group">
                                     <label for="language">Language:</label>
@@ -75,34 +170,6 @@
                                         </option>
                                     </select>
                                 </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <!-------------------------------------------------------------------------ISBN-->
-                                <div class="form-group">
-                                    <label for="isbn">ISBN:</label>
-                                    <input class="form-control" type="text" th:field="*{isbn}" id="isbn" placeholder="enter isbn" required th:pattern="${ISBN}">
-                                    <div class="invalid-feedback">Please fill out this field with a valid ISBN</div>
-                                </div>
-                                <div th:replace="fragments/components::backendValidationFieldErrors('isbn')"></div>
-                                <!-------------------------------------------------------------------------Publisher-->
-                                <div class="form-group">
-                                    <label for="publisher">Publisher:</label>
-                                    <input class="form-control" type="text" th:field="*{publisherName}" id="publisher" placeholder="enter publisher name" th:pattern="${TEXT_BASIC}">
-                                    <div class="invalid-feedback">Please fill out this field correctly</div>
-                                </div>
-                                <div th:replace="fragments/components::backendValidationFieldErrors('publisherName')"></div>
-                                <!-------------------------------------------------------------------------Author-->
-                                <label for="authorFirstName1">Author:</label>
-                                <div class="input-group mb-3">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text">Author</span>
-                                    </div>
-                                    <input class="form-control" type="text" th:field="*{authorFirstName1}" id="authorFirstName1" placeholder="First Name" th:pattern="${TEXT_BASIC}">
-                                    <input class="form-control" type="text" th:field="*{authorLastName1}" id="authorLastName1" placeholder="Last Name" th:pattern="${TEXT_BASIC}">
-                                    <div class="invalid-feedback">Please fill out this field correctly</div>
-                                </div>
-                                <div th:replace="fragments/components::backendValidationFieldErrors('authorFirstName1')"></div>
-                                <div th:replace="fragments/components::backendValidationFieldErrors('authorLastName1')"></div>
                                 <!-------------------------------------------------------------------------Pages-->
                                 <div class="form-group">
                                     <label for="numPages">Number of Pages:</label>
@@ -110,13 +177,6 @@
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendValidationFieldErrors('numPages')"></div>
-                                <!-------------------------------------------------------------------------Year-->
-                                <div class="form-group">
-                                    <label for="year">Year of Publication:</label>
-                                    <input class="form-control" type="text" th:field="*{year}" id="year" placeholder="enter year" th:pattern="${YEAR}">
-                                    <div class="invalid-feedback">Please fill out this field correctly</div>
-                                </div>
-                                <div th:replace="fragments/components::backendValidationFieldErrors('year')"></div>
                                 <!-------------------------------------------------------------------------Stock-->
                                 <div class="form-group">
                                     <label for="stock">Units in Stock:</label>
@@ -135,7 +195,7 @@
                                 </div>
                                 <div th:replace="fragments/components::backendValidationFieldErrors('price')"></div>
                             </div>
-                            <div class="col-sm-12">
+                            <div class="col-sm-12 bg-white">
                                 <button th:replace="fragments/components::saveButton"></button>
                             </div>
                         </div>
@@ -148,5 +208,6 @@
         <script th:replace="fragments/scripts::disableFormSubmissionOnInvalidField"></script>
         <script th:replace="fragments/scripts::isbnChecksum"></script>
         <script th:replace="fragments/scripts::binaryInputSwitch"></script>
+        <script th:replace="fragments/scripts::manageAuthors"></script>
     </body>
 </html>
